# GenshinImpactLoader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  account.cpp  account.hpp  helper.cpp  helper.hpp  main.cpp  resource.h  resource.hpp  resource.rc  version.rc.in
.github/workflows/: publish.yml
scripts/: build.sh  download-mingw.bat
snappy/: CMakeLists.txt
snappy/msvc/: config.h
snappy/win32/: config.h  snappy-stubs-public.h
